# tulip

./: Cargo.toml  README.md  index.html  tailwind.config.js
.github/workflows/: rust.yml
src/: app.rs  lib.rs  main.rs
style/: main.scss  tailwind.css
